--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- NAV -->
     <nav class="navbar bg-dark sticky-top">
         <div class="container">
-            <a class="nav-link link-secondary p-0" href="#">Loyal <img width="15" height="15" src="https://upload.wikimedia.org/wikipedia/commons/e/e4/Emoji_u1f408.svg"> Huskies</a>
+            <a class="nav-link link-secondary p-0" href="#">Loyal <img width="15" height="15" src="https://tinyurl.com/bdy9t27"> Huskies</a>
             <ul class="nav justify-content-end">
                 <li><a class="nav-link link-secondary" href="#">About</a></li>
                 <li><a class="nav-link link-secondary" href="#photos">Photos</a></li>
@@ -95,7 +95,7 @@
 
     <!-- Footer -->
     <footer class="bg-dark py-3">
-        <p class="text-center text-muted py-3 m-0 fs-4">&copy; 2021 The Odin Project</p>
+        <p class="text-center text-muted py-3 m-0 fs-4">&copy; 2023 The Odin Project</p>
     </footer>
 </body>
 
