--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>A Website of Huskies</title>
-    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/e/e4/Emoji_u1f408.svg">
+    <link rel="icon" href="https://shorturl.at/bhBJ2">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -13,7 +13,7 @@
     <!-- NAV -->
     <nav class="navbar bg-dark sticky-top">
         <div class="container">
-            <a class="nav-link link-secondary p-0" href="#">Loyal <img width="15" height="15" src="https://tinyurl.com/bdy9t27"> Huskies</a>
+            <a class="nav-link link-secondary p-0" href="#">Loyal <img width="15" height="15" src="https://shorturl.at/bhBJ2"> Huskies</a>
             <ul class="nav justify-content-end">
                 <li><a class="nav-link link-secondary" href="#">About</a></li>
                 <li><a class="nav-link link-secondary" href="#photos">Photos</a></li>
